#
# Copyright © 2020 Peter M. Stahl pemistahl@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "chr"
version = "1.0.0"
authors = ["Peter M. Stahl <pemistahl@gmail.com>"]
description = """
A command-line tool that prints useful information about any Unicode character
"""
homepage = "https://github.com/pemistahl/chr"
repository = "https://github.com/pemistahl/chr"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["unicode", "character", "text"]

[dependencies]
dirs = "3.0.1"
rusqlite = { version = "0.24.1", features = ["bundled"] }
zip = "0.5.8"

[dev-dependencies]

[build-dependencies]
csv = "1.1.4"
reqwest = { version = "0.10.9", features = ["blocking"] }
rusqlite = { version = "0.24.1", features = ["bundled"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
zip = "0.5.8"