#
# Copyright © 2020 Peter M. Stahl pemistahl@gmail.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "chr"
version = "1.0.0"
authors = ["Peter M. Stahl <pemistahl@gmail.com>"]
description = """
A command-line tool that prints useful information about any Unicode character
"""
homepage = "https://github.com/pemistahl/chr"
repository = "https://github.com/pemistahl/chr"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["unicode", "character", "text"]

[dependencies]
colored = "2.0.0"
dirs = "3.0.1"
minus = { version = "2.1.0", features = ["static_output"] }
rusqlite = { version = "0.24.2", features = ["bundled"] }
structopt = "0.3.21"
strum = "0.20.0"
strum_macros = "0.20.1"
zip = "0.5.9"

[dev-dependencies]

[build-dependencies]
csv = "1.1.5"
reqwest = { version = "0.10.10", features = ["blocking"] }
rusqlite = { version = "0.24.2", features = ["bundled"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
zip = "0.5.9"